logs/train/535/job.10538345.err

Currently Loaded Modules:
  1) tools/miniconda/python3.8/4.9.2

 

WARNING: overwriting environment variables set in the machine
overwriting variable nnUNet_raw_data_base nnUNet_preprocessed RESULTS_FOLDER OUTPUT
  Running command git clone -q https://github.com/FabianIsensee/hiddenlayer.git /tmp/pip-install-h1dd6yxj/hiddenlayer_355832a7ea6e4b8aaf9c02cf3c27ffff
  Running command git checkout -b more_plotted_details --track origin/more_plotted_details
  Switched to a new branch 'more_plotted_details'
  Branch 'more_plotted_details' set up to track remote branch 'more_plotted_details' from 'origin'.
Traceback (most recent call last):
  File "/home/smaijer/.conda/envs/nn/bin/nnUNet_train", line 33, in <module>
    sys.exit(load_entry_point('nnunet', 'console_scripts', 'nnUNet_train')())
  File "/home/smaijer/nnUNet/nnunet/run/run_training.py", line 138, in main
    trainer_class = get_default_configuration(network, task, network_trainer, plans_identifier)
  File "/home/smaijer/nnUNet/nnunet/run/default_configuration.py", line 59, in get_default_configuration
    trainer_class = recursive_find_python_class([join(*search_in)], network_trainer,
  File "/home/smaijer/nnUNet/nnunet/training/model_restore.py", line 28, in recursive_find_python_class
    m = importlib.import_module(current_module + "." + modname)
  File "/home/smaijer/.conda/envs/nn/lib/python3.9/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1030, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
  File "<frozen importlib._bootstrap>", line 986, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 850, in exec_module
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/home/smaijer/nnUNet/nnunet/training/network_training/nnUNetTrainerV2_Hybrid.py", line 16, in <module>
    from nnunet.network_architecture.susy.hybrid import Hybrid
  File "/home/smaijer/nnUNet/nnunet/network_architecture/susy/hybrid.py", line 17, in <module>
    from nnunet.network_architecture.susy.unetr import UNETREncoder
  File "/home/smaijer/nnUNet/nnunet/network_architecture/susy/unetr.py", line 71
    pos_embed: str = "perceptron",,
                                  ^
SyntaxError: invalid syntax
